added lines to table

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <!--input field-->
              <div id="table-head">
                 <form id="form" action="">
-                    <input id="newToDo" type="text" placeholder="Neue Aufgabe">
-                    <button id="newToDoButton">Hinzufügen</button>
+                    <input id="task" type="text" placeholder="Neue Aufgabe">
+                    <button id="addTaskButton" type="submit">Hinzufügen</button>
                 </form>
             </div> 
 
@@ -29,12 +29,9 @@
 
                 <tr class="exampleTask"> 
                     <td class="example">z.B. Putzen</td>
-                    <td class="example">X
-                    </td>
-                    <td class="example">edit
-                    </td>
-                    <td class="example">done
-                    </td>
+                    <td class="example">X</td>
+                    <td class="example">edit</td>
+                    <td class="example">done</td>
                 </tr>
 
             </table>
