added JS code for the checkboxes. Not done yet: the edit-box still has to be finished. Also, the layout might be a little screwed up now.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,27 @@
                     <i class="fa-sharp fa-solid fa-check"></i>   
                 </div>
             </div>
-        
+
+
+<!--This section is for coding purposes only and can be deleted later-->
+            <div id="Aufgabe" class="newTask">
+                <div id="description-Aufgabe" class="task">Bad putzen</div>
+                
+                <span id="delete" class="task">
+                    <i class="fa-sharp fa-solid fa-xmark"></i>
+                </span>
+
+                <span id="edit" class="task">
+                    <i class="fa-sharp fa-solid fa-pen"></i>
+                </span>
+
+                <span id="check" class="task">
+                    <i class="fa-sharp fa-solid fa-check"></i>   
+                </span>
+            </div>
+<!--end of coding section-->
+
+
     </div>
 
     <div>
@@ -80,7 +100,6 @@
     </div>
 
 </section>
-    <!--JS:  createElement(toDo2)-->
 
     <script src="./src/index.js"></script>
     <script src="https://kit.fontawesome.com/e5194f3209.js" crossorigin="anonymous"></script>
