improved edit checkbox function. still to do: make functions work on dynamically created tasks

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <!--This section is for coding purposes only and can be deleted later-->
             <div id="Aufgabe" class="newTask">
-                <div id="description-Aufgabe" class="task">Bad putzen</div>
+                <input id="description-Aufgabe" class="description" readonly>
                 
                 <span id="delete" class="task">
                     <i class="fa-sharp fa-solid fa-xmark"></i>
