--- a/index.html
+++ b/index.html
@@ -16,33 +16,6 @@
         <img src="img/logo.png" width="150" alt="">
     </div>
 
-<!-- 
-<h2>This HTML-Element is a table:</h2>
-     <section class="table-container">
-        <div id="black-field1" class ="black-field">-->
-
-            <!--input field-->
-            <!-- <div id="table-head">
-                <form id="form" action="">
-                    <input id="task" type="text" placeholder="Neue Aufgabe">
-                    <button id="addTaskButton" type="submit">Hinzufügen</button>
-                </form>
-            </div> 
-
-            <table id="table">
-
-                <tr class="exampleTask"> 
-                    <td class="example">z.B. Putzen</td>
-                    <td class="example">X</td>
-                    <td class="example">edit</td>
-                    <td class="example">done</td>
-                </tr>
-
-            </table>
-        </div>
-    </section> -->
-
-
     <!-- %%%%%%%%%%% tHIS IS A DIFFERNT ATTEMPT USING A DIV INSTEAD OF A TABLE!!!!-->
     <section class="table-container">
     <div id="black-field2" class ="black-field">
@@ -51,7 +24,7 @@
 
                 <form id="form2" action="">
                     <input id="newTask2" type="text" placeholder="Neue Aufgabe">
-                    <button id="newToDoButton2">Hinzufügen</button>
+                    <button id="newToDoButton2" tabindex="2">Hinzufügen</button>
                 </form>
 
             </div>
@@ -92,11 +65,6 @@
 <!--end of coding section-->
 
 
-    </div>
-
-    <div>
-        <div class="fake"><i class="fa-sharp fa-solid fa-plus"></i></div>
-        <div class="fake"><i class="fa-sharp fa-solid fa-plus"></i></div>
     </div>
 
 </section>
