the example tasks now disappears when a new task is added. it comes back when no own tasks are in the list.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             </div>
 
-            <div class="exampleTask">
+            <div id="exampleTask">
                 <div class="example">z.B. Einkaufen</div>
                 
                 <div class="example" onclick ="deleteTask(event)">
