the edit field is now focused when clicke don the dit icon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <!--This section is for coding purposes only and can be deleted later-->
             <!-- <div id="Aufgabe" class="newTask">
-                <input id="description-Aufgabe" class="description" disabled>
+                <input id="description-Aufgabe" class="description" type="submit" value="submit" onsubmit="replaceEditedTask()" disabled>
                 
                 <span id="delete" class="task" onclick ="deleteTask(event)">
                     <i class="fa-sharp fa-solid fa-xmark"></i>
